After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759764 - gtkinspector crashes app when selecting 'cancel' on initial prompt
gtkinspector crashes app when selecting 'cancel' on initial prompt
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Debugging
3.19.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-12-22 02:47 UTC by Daiki Ueno
Modified: 2015-12-22 07:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
inspector: Avoid crash when canceling at startup (1.78 KB, patch)
2015-12-22 02:48 UTC, Daiki Ueno
committed Details | Review

Description Daiki Ueno 2015-12-22 02:47:03 UTC
I'm not sure if this is a duplicate of bug 737026, but it still happens with the git master (3.19.5).  The backtrace is:

  • #0 gtk_inspector_window_rescan
    at inspector/window.c line 291
  • #1 update_debugging
    at gtkwindow.c line 12176
  • #2 gdk_threads_dispatch
    at gdk.c line 720
  • #3 g_main_dispatch
    at gmain.c line 3154
  • #4 g_main_context_dispatch
    at gmain.c line 3769
  • #5 g_main_context_iterate
    at gmain.c line 3840
  • #6 g_main_context_iteration
    at gmain.c line 3901
  • #7 g_application_run
    at gapplication.c line 2327
  • #8 main
    at main.c line 1177

Comment 1 Daiki Ueno 2015-12-22 02:48:17 UTC
Created attachment 317766 [details] [review]
inspector: Avoid crash when canceling at startup

When clicking "Cancel" on the "Do you want to use GTK+ Inspector?"
dialog, unregister the update_debugging idle handler.  Also, steal
reference to 'inspector_window' while gtk_destroy_widget(), to make
further gtk_window_update_debugging() calls as a no-op.
Comment 2 Matthias Clasen 2015-12-22 02:54:35 UTC
Review of attachment 317766 [details] [review]:

looks right
Comment 3 Daiki Ueno 2015-12-22 07:28:37 UTC
Attachment 317766 [details] pushed as 75b3eec - inspector: Avoid crash when canceling at startup